@@ -1,6 +1,7 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.014
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
+requires "Exporter::Tiny" => "0";
 requires "HTTP::Status" => "0";
 requires "Hash::Match" => "0";
 requires "Plack::Middleware" => "0";
