@@ -16,6 +16,9 @@
 [Collect / ATTRIBUTES]
 command = attr
 
+[Collect / EXPORTS]
+command = export
+
 [Leftovers]
 
 [Region  / postlude]
